--- a/index.html
+++ b/index.html
@@ -1,200 +1,226 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>الامتحان النهائي</title>
 <style>
-    body {
-        font-family: Tahoma, sans-serif;
-        background: #f4f6f8;
-        color: #333;
-        text-align: center;
-        padding: 20px;
-    }
-    .box {
-        background: white;
-        padding: 20px;
-        border-radius: 15px;
-        max-width: 600px;
-        margin: auto;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-    input, textarea, button {
-        width: 90%;
-        padding: 10px;
-        margin: 8px 0;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-    }
-    button {
-        background: #28a745;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-    button:disabled {
-        background: #999;
-        cursor: not-allowed;
-    }
-    #timer {
-        font-size: 20px;
-        font-weight: bold;
-        margin: 10px 0;
-        color: #e53935;
-    }
+  body {
+    font-family: Tahoma, sans-serif;
+    background: #f4f6f8;
+    color: #333;
+    text-align: center;
+    padding: 20px;
+  }
+  .box {
+    background: white;
+    padding: 20px;
+    border-radius: 15px;
+    max-width: 600px;
+    margin: auto;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  }
+  input, textarea, button {
+    width: 90%;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+  }
+  button {
+    background: #28a745;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  button:disabled {
+    background: #999;
+    cursor: not-allowed;
+  }
+  #timer {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0;
+    color: #e53935;
+  }
+  ul {
+    text-align: right;
+  }
 </style>
 </head>
 <body>
 
 <div id="start-screen" class="box">
-    <h2>أدخل بياناتك لبدء الامتحان</h2>
-    <input type="text" id="studentName" placeholder="اسمك" required>
-    <input type="text" id="college" placeholder="الكلية" required>
-    <button onclick="showIntro()">التالي</button>
+  <h2>أدخل بياناتك لبدء الامتحان</h2>
+  <input type="text" id="studentName" placeholder="اسمك" required>
+  <input type="text" id="college" placeholder="الكلية" required>
+  <button onclick="showIntro()">التالي</button>
 </div>
 
 <div id="intro-screen" class="box" style="display:none;">
-    <h2>مرحباً بك في الامتحان النهائي</h2>
-    <p>👋 نتمنى لك التوفيق والنجاح</p>
-    <p>📌 تعليمات:</p>
-    <ul style="text-align:right;">
-        <li>لكل سؤال 5 دقائق</li>
-        <li>لا يمكنك الانتقال للسؤال التالي حتى مرور 3 دقائق على الأقل</li>
-        <li>الإجابات تُحفظ تلقائياً</li>
-    </ul>
-    <button onclick="startExam()">ابدأ الامتحان</button>
+  <h2>مرحباً بك في الامتحان النهائي</h2>
+  <p>👋 نتمنى لك التوفيق والنجاح</p>
+  <p>📌 تعليمات:</p>
+  <ul>
+    <li>لكل سؤال 5 دقائق</li>
+    <li>لا يمكنك الانتقال للسؤال التالي إلا بعد مرور 3 دقائق</li>
+    <li>الإجابات تُحفظ تلقائياً</li>
+  </ul>
+  <button onclick="startExam()">ابدأ الامتحان</button>
 </div>
 
 <div id="exam-screen" class="box" style="display:none;">
-    <h3 id="question-text"></h3>
-    <div id="timer"></div>
-    <textarea id="answer" rows="6" placeholder="اكتب إجابتك هنا..."></textarea>
-    <br>
-    <button id="submit-btn" onclick="submitAnswer()" disabled>إرسال الإجابة</button>
+  <h3 id="question-text"></h3>
+  <div id="timer"></div>
+  <textarea id="answer" rows="6" placeholder="اكتب إجابتك هنا..."></textarea>
+  <br>
+  <button id="submit-btn" onclick="submitAnswer()">إرسال الإجابة</button>
 </div>
 
 <div id="finish-screen" class="box" style="display:none;">
-    <h2>✅ تم إكمال الامتحان</h2>
-    <p>شكرًا لمشاركتك</p>
+  <h2>✅ تم إكمال الامتحان</h2>
+  <p>شكرًا لمشاركتك</p>
 </div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbyM89Yn2JJ1lNLk-HxEIndhdEeh4Me9fTNLlSUMJs40H_6gjsVDAuesrvTH_GeCYbVKOg/exec"; // 🔴 عدله برابط Google Apps Script
-let questions = [];
-let currentQuestionIndex = 0;
-let timerInterval;
-let startTime, submitTime;
-let studentName = "", college = "";
+  const API_URL = "https://script.google.com/macros/s/AKfycbwLZtUe4aXC9fuaHBuxw5PdE5OnYfzfnBqAUrbdJ_WV8qgbH7psE1J7N7S95I3j4w3evQ/exec" Google Apps Script الخاص بك
+  let questions = [];
+  let currentQuestionIndex = 0;
+  let timerInterval;
+  let startTime, submitTime;
+  let studentName = "", college = "";
 
-function showIntro() {
+  function showIntro() {
     studentName = document.getElementById('studentName').value.trim();
     college = document.getElementById('college').value.trim();
     if (!studentName || !college) {
-        alert("الرجاء إدخال اسمك والكلية");
-        return;
+      alert("الرجاء إدخال اسمك والكلية");
+      return;
     }
     document.getElementById('start-screen').style.display = "none";
     document.getElementById('intro-screen').style.display = "block";
-}
+  }
 
-async function startExam() {
+  async function startExam() {
     document.getElementById('intro-screen').style.display = "none";
     document.getElementById('exam-screen').style.display = "block";
     await loadQuestions();
     showQuestion();
-}
+  }
 
-async function loadQuestions() {
-    let res = await fetch(API_URL, {
+  async function loadQuestions() {
+    try {
+      let res = await fetch(API_URL, {
         method: "POST",
         body: JSON.stringify({action: "getQuestions"})
-    });
-    questions = await res.json();
-}
-
-function showQuestion() {
-  if (currentQuestionIndex >= questions.length) {
-    document.getElementById('exam-screen').style.display = "none";
-    document.getElementById('finish-screen').style.display = "block";
-    return;
-  }
-  let q = questions[currentQuestionIndex];
-  document.getElementById('question-text').innerText = q.text;
-  document.getElementById('answer').value = "";
-
-  const submitBtn = document.getElementById('submit-btn');
-  submitBtn.style.display = "inline-block";
-  submitBtn.disabled = false;
-
-  startTime = new Date();
-  let totalSeconds = q.time * 60; // 5 دقائق
-  let minWaitSeconds = 180; // 3 دقائق
-
-  clearInterval(timerInterval);
-  timerInterval = setInterval(() => {
-    totalSeconds--;
-    let minutes = Math.floor(totalSeconds / 60);
-    let seconds = totalSeconds % 60;
-    document.getElementById('timer').innerText = `الوقت المتبقي: ${minutes}:${seconds.toString().padStart(2, '0')}`;
-
-    if (totalSeconds <= 0) {
-      clearInterval(timerInterval);
-      // الوقت انتهى وإذا لم يضغط الطالب، نحفظ الإجابة تلقائياً
-      autoSubmitAnswer();
+      });
+      questions = await res.json();
+    } catch (err) {
+      alert("حدث خطأ أثناء جلب الأسئلة. تأكد من رابط API والاتصال بالإنترنت.");
     }
-  }, 1000);
-}
-
-async function submitAnswer() {
-  submitTime = new Date();
-  let elapsedSeconds = (submitTime - startTime) / 1000;
-
-  if (elapsedSeconds < 180) {
-    alert(`لا يمكنك الانتقال للسؤال التالي قبل مرور 3 دقائق. الرجاء الانتظار ${Math.ceil(180 - elapsedSeconds)} ثانية.`);
-    return;
   }
 
-  let answerText = document.getElementById('answer').value.trim();
-  let q = questions[currentQuestionIndex];
-  const submitBtn = document.getElementById('submit-btn');
-  submitBtn.disabled = true;
+  function showQuestion() {
+    if (currentQuestionIndex >= questions.length) {
+      document.getElementById('exam-screen').style.display = "none";
+      document.getElementById('finish-screen').style.display = "block";
+      return;
+    }
+    let q = questions[currentQuestionIndex];
+    document.getElementById('question-text').innerText = q.text;
+    document.getElementById('answer').value = "";
 
-  clearInterval(timerInterval); // إيقاف المؤقت عند الإرسال
+    startTime = new Date();
+    let totalSeconds = q.time * 60; // 5 دقائق
+    let minWaitSeconds = 180; // 3 دقائق
 
-  try {
-    let res = await fetch(API_URL, {
-      method: "POST",
-      body: JSON.stringify({
-        action: "saveAnswer",
-        studentName: studentName,
-        college: college,
-        questionId: q.id,
-        questionText: q.text,
-        answerText: answerText,
-        startTime: startTime.toLocaleString(),
-        submitTime: submitTime.toLocaleString()
-      })
-    });
-    let result = await res.json();
+    clearInterval(timerInterval);
+    timerInterval = setInterval(() => {
+      totalSeconds--;
+      let minutes = Math.floor(totalSeconds / 60);
+      let seconds = totalSeconds % 60;
+      document.getElementById('timer').innerText = `الوقت المتبقي: ${minutes}:${seconds.toString().padStart(2, '0')}`;
 
-    if (result.status === "Saved") {
-      currentQuestionIndex++;
-      showQuestion();
-    } else {
-      alert("حدث خطأ أثناء حفظ الإجابة، حاول مجدداً.");
+      if (totalSeconds <= 0) {
+        clearInterval(timerInterval);
+        // عند انتهاء الوقت إذا لم يضغط الطالب زر الإرسال، تحفظ الإجابة تلقائياً
+        autoSubmitAnswer();
+      }
+    }, 1000);
+  }
+
+  async function submitAnswer() {
+    submitTime = new Date();
+    let elapsedSeconds = (submitTime - startTime) / 1000;
+
+    if (elapsedSeconds < 180) {
+      alert(`لا يمكنك الانتقال للسؤال التالي قبل مرور 3 دقائق. الرجاء الانتظار ${Math.ceil(180 - elapsedSeconds)} ثانية.`);
+      return;
+    }
+
+    let answerText = document.getElementById('answer').value.trim();
+    let q = questions[currentQuestionIndex];
+    const submitBtn = document.getElementById('submit-btn');
+    submitBtn.disabled = true;
+
+    clearInterval(timerInterval); // إيقاف المؤقت عند الإرسال
+
+    try {
+      let res = await fetch(API_URL, {
+        method: "POST",
+        body: JSON.stringify({
+          action: "saveAnswer",
+          studentName: studentName,
+          college: college,
+          questionId: q.id,
+          questionText: q.text,
+          answerText: answerText,
+          startTime: startTime.toLocaleString(),
+          submitTime: submitTime.toLocaleString()
+        })
+      });
+      let result = await res.json();
+
+      if (result.status === "Saved") {
+        currentQuestionIndex++;
+        showQuestion();
+      } else {
+        alert("حدث خطأ أثناء حفظ الإجابة، حاول مجدداً.");
+        submitBtn.disabled = false;
+      }
+    } catch (err) {
+      alert("خطأ في الاتصال، تأكد من الإنترنت وحاول مرة أخرى.");
       submitBtn.disabled = false;
     }
-  } catch (err) {
-    alert("خطأ في الاتصال، تأكد من الإنترنت وحاول مرة أخرى.");
-    submitBtn.disabled = false;
   }
-}
 
+  async function autoSubmitAnswer() {
+    submitTime = new Date();
+    let answerText = document.getElementById('answer').value.trim();
+    let q = questions[currentQuestionIndex];
 
-    currentQuestionIndex++;
-    showQuestion();
-}
+    try {
+      await fetch(API_URL, {
+        method: "POST",
+        body: JSON.stringify({
+          action: "saveAnswer",
+          studentName: studentName,
+          college: college,
+          questionId: q.id,
+          questionText: q.text,
+          answerText: answerText,
+          startTime: startTime.toLocaleString(),
+          submitTime: submitTime.toLocaleString()
+        })
+      });
+    } catch (err) {
+      // يمكن تضيف هنا معالجة الأخطاء إذا تحب
+    } finally {
+      currentQuestionIndex++;
+      showQuestion();
+    }
+  }
 </script>
+
 </body>
 </html>
